# nft-onboarding

contracts/: Cargo.toml
contracts/src/: lib.rs
server/utils/: near-utils.js
src/: config.js
