[package]
name = "nft"
version = "0.1.0"
authors = ["Near Inc <hello@near.org>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.61"
near-sdk = "2.0.1"
borsh = "0.7.1"
hex = "0.4.2"
wee_alloc = "0.4.5"

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true

#We needed to add the below crate because when running yarn during the testing process of the code locally,
#The contract had problems fetching other external Rust crates into the code in order to implement some features
[net]
git-fetch-with-cli = true
